--- a/package.json
+++ b/package.json
@@ -13,12 +13,16 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/morgan": "^1.9.10",
     "@types/node": "^24.10.0",
     "tsx": "^4.20.6",
     "typescript": "^5.9.3"
   },
   "dependencies": {
     "@hono/node-server": "^1.19.6",
-    "hono": "^4.10.4"
+    "dotenv": "^17.2.3",
+    "hono": "^4.10.4",
+    "morgan": "^1.10.1",
+    "zod": "^4.1.12"
   }
 }
